[package]
name = "skibidichain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0"                   
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
num-bigint = "0.4"
num-traits = "0.2" 
sled = "0.34.7"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"
base64 = "0.22.1"
once_cell = "1.20.2"
parity-db = "0.5.0"
rand = "0.8.5"
